# multi-robot-rrt-exploration-noetic

./: README.md
ros_multi_tb3/: CMakeLists.txt  package.xml
ros_multi_tb3/configuration/: cartographer_velodyne.lua  gmapping_params.yaml  mapper_tb3_0.yaml  mapper_tb3_1.yaml  mapper_tb3_2.yaml  turtlebot3_lds_2d.lua
ros_multi_tb3/launch/: multiple_tb3_house.launch  single_tb3_house.launch
ros_multi_tb3/launch/includes/: amcl.launch  cartographer.launch  costmap_generate.launch  duo_tb3_mapmerge.launch  move_base.launch  multi_tb3_mapmerge.launch  octomap.launch
ros_multi_tb3/params/: base_global_planner.yaml  base_local_planner_params.yaml  base_local_planner_teb.yaml  base_local_planner_teb_.yaml  base_local_planner_teb_tb3_0.yaml  base_local_planner_teb_tb3_1.yaml  base_local_planner_teb_tb3_2.yaml  base_local_planner_teb_tb3_3.yaml  costmap_common_params_waffle_pi.yaml  dwa_local_planner_params_waffle_pi.yaml  global_costmap_params.yaml  global_costmap_params_.yaml  global_costmap_params_global.yaml  global_costmap_params_tb3_0.yaml  global_costmap_params_tb3_1.yaml  global_costmap_params_tb3_2.yaml  global_costmap_params_tb3_3.yaml  local_costmap_params.yaml  local_costmap_params_.yaml  local_costmap_params_tb3_0.yaml  local_costmap_params_tb3_1.yaml  local_costmap_params_tb3_2.yaml  local_costmap_params_tb3_3.yaml  move_base_params.yaml
ros_multi_tb3/rviz/: multi_tb3_gmapping.rviz  single_tb3_gmapping.rviz
ros_multi_tb3/urdf/: VLP-16.urdf.xacro  turtlebot3_waffle_pi.gazebo.xacro  turtlebot3_waffle_pi.urdf.xacro
ros_multi_tb3/worlds/: turtlebot3_house_mod.world
rrt_exploration/launch/: single_robot.launch  three_robots.launch
rrt_exploration/scripts/: assigner.py  boundary.py  filter.py  frontier_opencv_detector.py  functions.py  getfrontier.py
